# ai-rookie

./: .gitignore  README.md  pyproject.toml
032627_tsai/2026_ai_rookie_course4/: .gitignore  pyproject.toml  readme.md  test.json  train.json
032627_tsai/2026_ai_rookie_course4/lab0/: README.md  lab0.py
032627_tsai/2026_ai_rookie_course4/lab1/: README.md  lab1.py
032627_tsai/2026_ai_rookie_course4/lab2/: README.md  lab2.py
032627_tsai/2026_ai_rookie_course4/lab3/: README.md  docker-compose.yaml  lab3.py  more_topics.py  test.json
032627_tsai/2026_ai_rookie_course4/lab4/: README.md  lab4.py
032627_tsai/2026_ai_rookie_course4/lab4_aidaptiv/: convert_json.py  docker-compose.yaml  exp_config.yaml  input.json  readme.md  train.json
032627_tsai/2026_ai_rookie_course4/lab5/: README.md  lab5.py
032627_tsai/2026_ai_rookie_course4/lab6/: README.md  lab6.py
032627_tsai/2026_ai_rookie_course4/workdir/: eval_results.json
0416_guru/2026_ai_rookie_course6/: .gitignore  docker-compose-vllm.yaml  openai_multi_client.py  pyproject.toml  readme.md
0416_guru/2026_ai_rookie_course6/docs/: README.md
0416_guru/2026_ai_rookie_course6/extra_a/: README.md  error_analysis.md  extra_a.py
0416_guru/2026_ai_rookie_course6/extra_b/: README.md  convert_and_split.py  extra_b.py  run_benchmark.py  run_inference.py
0416_guru/2026_ai_rookie_course6/lab0/: README.md  lab0.py
0416_guru/2026_ai_rookie_course6/lab1/: README.md  lab1.py  observation.md
0416_guru/2026_ai_rookie_course6/lab2/: README.md  lab2.py
0416_guru/2026_ai_rookie_course6/lab3_finetune/: QA_dataset_config.yaml  README.md  docker-compose.yaml  env_config.yaml  exp_config.yaml  train.json
0416_guru/2026_ai_rookie_course6/lab4/: README.md  comparison_reoirt.md  lab4.py
0416_guru/2026_ai_rookie_course6/lab5/: README.md  ablation_report.nd  lab5.py
0423_SFT/2026_ai_rookie_course7/: .gitignore  docker-compose.yaml  pyproject.toml  ~$LLM與資料基礎_Tokenizer_Chat Template_資料格式_指令微調-SFT與資料設計.pptx
0423_SFT/2026_ai_rookie_course7/common/: call_llm.py  llm_client.py  prompts.py  tool_schema.py  tools.py  utils.py  validator.py
0423_SFT/2026_ai_rookie_course7/lab1/: readme.md  run_chat.py
0423_SFT/2026_ai_rookie_course7/lab2/: eval.py  eval_cases.json  readme.md
0423_SFT/2026_ai_rookie_course7/lab2_evaluation/: eval_report.json
0423_SFT/2026_ai_rookie_course7/lab3/: generate_data.py  readme.md
0423_SFT/2026_ai_rookie_course7/lab4/: readme.md  (+3 more)
2026_ai_rookie_course8/: .gitignore  docker-compose-trained.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
2026_ai_rookie_course8/common/: call_llm.py  prompts.py  tool_schema.py  tools.py  utils.py
2026_ai_rookie_course8/lab1/: 1_baseline_inference.py  2_evaluate.py  README.md  baseline_outputs(copy).json  eval_report.json  lab5_eval_report.json  trained_outputs.json
2026_ai_rookie_course8/lab2/: 1_reward_functions.py  2_test_rewards.py  README.md  grpo_sample_data.json  reward_functions_solution.py
2026_ai_rookie_course8/lab3/: README.md  prepare_dataset.py  training_prompts.json
2026_ai_rookie_course8/lab4/: 2_grpo_training.py  README.md
2026_ai_rookie_course8/lab5/: 1_inference_trained.py  README.md
2026_ai_rookie_course8/lab6/: README.md
GRAG/2026_ai_rookie_course5/: docker-compose-neo4j.yaml  docker-compose-vllm.yaml  pyproject.toml
(+150 files in other folders)
