[project]
name = "llm-distillation-lab"
version = "0.1.0"
description = "LLM 知識蒸餾實作 Lab — SFT Baseline + Black-box Reasoning KD"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.11.0",
    "transformers==5.8.0",
    "datasets",
    "trl==1.3.0",
    "peft==0.19.1",
    "bitsandbytes",
    "accelerate",
    "rouge-score",
    "openai",
    "tqdm",
]
