[project]
name = "ai-rookie-course8"
version = "0.1.0"
description = "AI Rookie 2026 Course 8 - RLHF labs"
requires-python = ">=3.10"
dependencies = [
    "transformers==5.5.0",
    "accelerate==1.13.0",
    "bitsandbytes==0.49.2",
    "datasets==4.8.3",
    "trl==1.3.0",
    "peft==0.18.1",
    "torch>=2.4.0",          # transformers 5.5.0 要求 PyTorch 2.4+
    "torchvision",           # Qwen2VLImageProcessor 必需（用到 torchvision.transforms.v2）
    "pillow",
    "jsonschema>=4.26.0",
]
