[project]
name = "ai-rookie-course4"
version = "0.1.0"
description = "LLM 訓練與資料基礎：課程實作（Lab0–Lab6）"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "transformers==5.3.0",
    "accelerate==1.13.0",
    "bitsandbytes==0.49.2",
    "datasets==4.8.3",
    "trl==0.29.1",
    "peft>=0.13",
    "tqdm>=4.66",
    "requests>=2.31",
    "opencc-python-reimplemented>=0.1.7",
]

[tool.uv]
package = false
