[project]
name = "nycu-airookie-guru"
version = "0.1.0"
description = "NYCU AI Rookie - Guru QA 生成、微調與驗證 Lab"
requires-python = ">=3.10"
dependencies = [
    "openai==1.99.9",
    "tqdm>=4.64.0",
    "opencc-python-reimplemented==0.1.7",
    "requests>=2.28.0",
    "PyPDF2==3.0.1",
    "pdfminer.six==20240706",
    "pymupdf==1.24.13",
    "pdf2image==1.17.0",
    "Pillow>=9.0.0",
    "python-docx>=0.8.11",
    "langchain==0.3.7",
    "langchain_community==0.3.5",
    "langchain-huggingface>=0.1.0",
    "chromadb==0.5.17",
    "faiss-cpu>=1.7.0",
    "sentence-transformers==3.1.1",
    "torch>=2.0.0",
    "transformers>=4.38.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "aioprocessing>=2.0.0",
    "tenacity>=8.0.0",
    "llama-index==0.13.1",
    "llama-index-llms-openai>=0.3.0",
    "matplotlib>=3.5.0",
    "openai-multi-client>=0.1.1",
]

[tool.uv]
package = false
