[project]
name = "ai-rookie-course7"
version = "0.1.0"
description = "AI 新秀計畫第七期：Function Calling 完整學習路徑"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.31",
    "jsonschema>=4.21",
    "fastapi>=0.110",
    "pydantic>=2.6",
    "uvicorn>=0.27",
    "torch>=2.2",
    "transformers>=4.40",
    "peft>=0.10",
    "datasets>=2.19",
    "trl>=0.8",
    "unsloth>=2026.4.7",
    "bitsandbytes>=0.49.2",
]
